landing-page/styles/styles.css
*{
    box-sizing: border-box;
}

body{
    background-color: #F7F7FF;
}
/*mobile 375px-------------------------------------------------------------------*/
.wrapper{
    padding-left: 10%;
    padding-right: 10%;
}
/*image sizes*/
.logo{
    height: auto;
    width: 114.73px;
}
.scooter{
    height: 211.53px;
    width: 289.23px;
    /*centers scooter*/
    display: block;
    margin-left: auto;
    margin-right: auto;
    /*whitespace for scooter*/
    padding: 2rem;
}
/*general text rules in header*/
h1{
    font-family: "montserrat";
    font-weight: bold;
    font-size: 60pt;
    color: #333131;
}
h3{
    font-family: "montserrat";
    font-weight: normal;
    font-size: 24pt;
    color: #333131;
    text-align: center;
}
/*form 1 appearance*/
.form1{
    background-color: #ffffff;
    border-radius: 25px;
    padding: 10%;
    margin-bottom: 5em;

    box-shadow: 10px 10px 30px grey;
}
/*had to target the inputs in the form seperatly due confliction in footer inputs*/
fieldset input:nth-child(1){
    width: 100%;
    /*padding*/
    margin-bottom: 1rem;
    padding: 1rem;
    /*boarder*/
    border: 0pt;
    border-radius: 15px;
    /*text properties*/
    font-family: "montserrat";
    font-weight: normal;
    font-size: 16pt;
    /*color*/
    color: #333131;
    background-color: #F4F4F5;
}
/*text in form 1*/
h2{
    font-family: "montserrat";
    font-weight: bold;
    font-size: 40pt;
    color: #333131;
}
/*e-y-i-b is the class to target the first paragraph in the fieldset tag*/
.e-y-i-b{
    font-family: "montserrat";
    font-weight: normal;
    font-size: 16pt;
    color: #333131;
    padding: 1rem;
    padding-left: 0rem;
}
fieldset:nth-child(6){
    display: flex;
    padding: 1rem;
    flex: start;
}
/*replacing checkbox*********************************************************************************************************/
/*hides checkbox*/
.checkbox-container input[type="checkbox"]{
    display: none;
} 
/*new checkbox*/
.checkbox-container{
    display: inline-block;
    position: relative;
    cursor: pointer;
    font-family: "montserrat";
    user-select: none;
}
.checkbox-container .check-box{
    /*preset*/
    display: inline-block;
    font-size: 16pt;
    width: 25px;
    height: 25px;
    background-color: #ffffff;
    border: solid #000;
    border-width: 1.5px 1.5px;
    border-radius: 5px;
    position: absolute;
    left: 0;
    top: 0; 
}
    /*when pressed*/
.checkbox-container input:checked + .check-box{
    background-color: #f4f4f5;
}
    /*on hover*/
.checkbox-container:hover .check-box{
    background-color: #f4f4f5;
}
    /*after check action*/
.checkbox-container input:checked + .check-box:after{
    content: "";
    position: absolute;
    height: 4px;
    width: 9px;
    border-left: 2px solid #000000;
    border-bottom: 2px solid #000000;
    top: 50%;
    left: 50%;
    transform: translate(-50%,-50%) rotate(-45deg);
}
/*text beside checkbox*/
.i-a-t-d-t{
    margin-top: 2px;
    margin-left: 50px;
    font-family: "montserrat";
    font-weight: normal;
    font-size: 16pt;
    color: #333131;
    margin-bottom: 1em;
}
/*********************************************************************************************************************************************/
/*styles for DRIVE WITH US button*/
.button-green{
    cursor: pointer;
    border: none;
    background-color: #57eeab;
    font-family: "montserrat";
    color: #333131;
    font-weight: bold;
    font-size: 24pt;
    border-radius: 10px;
    padding: .5em;
    width: 100%;
    text-align: center;
    margin: auto auto;
}


.last-text-in-form-1{
    display: flex;
}
.a-a{
    margin-top: 2em;
    font-family: "montserrat";
    font-size: 14pt;
    color: #333131;
}
/*styles for link next to 'i agree to dash terms'*/
.c-y-a-s-h:visited, .c-y-a-s-h:active, .c-y-a-s-h:link, .c-y-a-s-h:hover{
    color: #ff8480;
    text-decoration: none;
}
footer{
    background-color: #fffd8c;
    padding: 3em;
}
h4{
    font-family: "montserrat";
    font-size: 18pt;
    font-weight: bold;
    color: #333131;
    padding-bottom: 1em;
}
footer p{
    color: red;
    font-family: "montserrat";
    font-size: 16pt;
    color: #333131;
    padding-bottom: 2em;
}
/*calc*/
.calc-container{
    display: grid;
    grid-template-columns: repeat(7, 1fr);
    grid-template-rows: 1fr 1fr;
    grid-gap: 10px;
}
.footer-input{
    /*padding*/
    margin-bottom: 1rem;
    padding: 1rem;
    /*boarder*/
    border: 0pt;
    border-radius: 15px;
    /*text properties*/
    font-family: "montserrat";
    font-weight: normal;
    font-size: 16pt;
    /*color*/
    color: #333131;
    background-color: #F4F4F5;

}
.hours{
    grid-row: 1 / span 1;
    grid-column: 1 / span 2;
    width: 100%;
}

.city{
    grid-row: 1 / span 1;
    grid-column: 3 / span 5;
    width: 100%;
}
.red-button{
    grid-row: 2;
    grid-column: 1 / span 7;
    cursor: pointer;
    border: none;
    background-color: #FF8480;
    font-family: "montserrat";
    color: #F7F7FF;
    font-weight: bold;
    font-size: 24pt;
    border-radius: 10px;
    padding: 0.25em;
    text-align: center;
}
.social-media-foot{
    display: flex;
    padding-top: 3em;
    justify-content: space-around;
}
/*tablet-view----------------------------------------------------------------------------------------------------------------------------------------------------------
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
***********************************************************************************************************************************************************************/
@media only screen and (min-width: 768px) {
    h1{
        font-size: 80pt;
    }
    .scooter{
        height: auto; 
        width: 420.64px;
    }
    .e-y-i-b{
        font-size: 30pt;
    }
    input{
        font-size: 18pt;
    }
    /*checkbot items*/
    .checkbox-container .check-box{
        width: 30px;
        height: 30px;
    }
    .i-a-t-d-t{
        font-size: 20pt; 
    }
    .button-green{
        font-size: 32pt;
    }
    a-a{
        font-size: 17pt;
    }

    /*calc tablet*/
    
    .calc-container{
        display: grid;
        grid-template-columns: repeat(12, 1fr);
        grid-template-rows: 1fr 1fr;
        grid-gap: 20px;
    }
    .hours{
        grid-row: 1 / span 1;
        grid-column: 1 / span 2;
        width: 100%;
    }
    .city{
        grid-row: 1 / span 1;
        grid-column: 3 / span 6;
        width: 100%;
    }
    .red-button{
        height: 58.4px;
        align-items: center;
        grid-row: 1  / span 1;
        grid-column:  9 / span 4;
        padding: none;
    }
}
/*desktop*/
/*+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
/*-----------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
/*************************************************************************************************************************************************************************/

